-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
The refactoring for 8145725 reads _cur_index outside the mutex and so its value can change. Need to use the saved index instead.
- duplicates
-
JDK-8149708 java/util/concurrent/locks/LockSupport/ParkLoops times out or crashes
-
- Closed
-
- relates to
-
JDK-8151501 LockSupport/ParkLoops.java: AssertionError: lost unpark
-
- Closed
-
-
JDK-8149708 java/util/concurrent/locks/LockSupport/ParkLoops times out or crashes
-
- Closed
-
-
JDK-8145725 Remove the WorkAroundNPTLTimedWaitHang workaround
-
- Resolved
-