8149697: Fix for 8145725 is broken

As per the existing comment we needed to check the saved 'index' instead

Reviewed-by: gthornbr, dcubed, kbarrett